--- a/docs/lib/sage-frontend/stylesheets/docs/_text.scss
+++ b/docs/lib/sage-frontend/stylesheets/docs/_text.scss
@@ -6,7 +6,7 @@
 
 code {
   display: inline-block;
-  padding: 0 sage-spacing(2xs);
+  padding: 0 var(--pine-dimension-050);
   font-size: 0.9em;
   background-color: var(--pine-color-grey-200);
 }
