--- a/packages/sage-assets/lib/stylesheets/components/_icon_card.scss
+++ b/packages/sage-assets/lib/stylesheets/components/_icon_card.scss
@@ -10,7 +10,7 @@
   align-items: center;
   justify-content: center;
   align-self: stretch;
-  padding: sage-spacing(lg);
+  padding: var(--pine-dimension-400);
   border-radius: sage-border(radius);
   background-color: var(--background-color, inherit);
 
