--- a/packages/sage-assets/lib/stylesheets/components/_progress_bar.scss
+++ b/packages/sage-assets/lib/stylesheets/components/_progress_bar.scss
@@ -4,7 +4,7 @@
 /// @group sage
 ////
 
-$-progress-bar-height: sage-spacing(xs);
+$-progress-bar-height: var(--pine-dimension-100);
 
 @keyframes sage-progress-bar--slide {
   from {
