--- a/docs/lib/sage-frontend/stylesheets/docs/_token.scss
+++ b/docs/lib/sage-frontend/stylesheets/docs/_token.scss
@@ -15,7 +15,7 @@
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
-  padding: sage-spacing(xs) sage-spacing(sm);
+  padding: var(--pine-dimension-100) var(--pine-dimension-200);
   font-size: sage-font-size(body-sm);
   border-block-end: sage-border();
 
@@ -89,7 +89,7 @@
     }
   }
   &-shadow::after {
-    content: "#{sage-shadow()}";
+    content: "#{var(--pine-box-shadow-200)}";
   }
   @each $name, $token in $sage-shadows {
     &-shadow-#{$name}::after {
@@ -105,7 +105,7 @@
     }
   }
   &-spacing::after {
-    content: "#{sage-spacing()}";
+    content: "#{var(--pine-dimension-300)}";
   }
   @each $name, $token in $sage-spacings {
     &-spacing-#{$name}::after {
