--- a/packages/sage-assets/lib/stylesheets/components/_card.scss
+++ b/packages/sage-assets/lib/stylesheets/components/_card.scss
@@ -14,7 +14,7 @@ $-sage-card-background: transparent;
   position: relative;
   width: 100%;
   background-color: sage-color(white);
-  box-shadow: sage-shadow(100);
+  box-shadow: var(--pine-box-shadow-100);
 
   .sage-card,
   .sage-panel & {
@@ -42,12 +42,12 @@ $-sage-card-background: transparent;
 }
 
 .sage-card--compact {
-  gap: sage-spacing(sm);
-  padding: sage-spacing(sm);
+  gap: var(--pine-dimension-200);
+  padding: var(--pine-dimension-200);
 
   .sage-card__divider--full-bleed,
   .sage-card__list {
-    margin: 0 -#{sage-spacing(sm)};
+    margin: 0 -#{var(--pine-dimension-200)};
   }
 }
 
@@ -110,7 +110,7 @@ $-sage-card-background: transparent;
     content: attr(data-divider-label);
     display: inline-block;
     position: relative;
-    padding: 0 sage-spacing(sm);
+    padding: 0 var(--pine-dimension-200);
     color: var(--pine-color-grey-600);
     font-size: sage-font-size(body-xs);
     background-color: sage-color(white);
@@ -119,7 +119,7 @@ $-sage-card-background: transparent;
 
 .sage-card__divider--full-bleed {
   padding: 0;
-  margin: 0 -#{sage-spacing(card)};
+  margin: 0 -#{var(--pine-dimension-300)};
 }
 
 .sage-card__figure {
@@ -139,21 +139,21 @@ $-sage-card-background: transparent;
 }
 
 .sage-card__figure--bleed-bottom {
-  width: calc(100% + #{2 * sage-spacing(sm)});
-  margin: 0 (-1 * sage-spacing(sm)) (-1 * sage-spacing(sm));
+  width: calc(100% + #{2 * var(--pine-dimension-200)});
+  margin: 0 (-1 * var(--pine-dimension-200)) (-1 * var(--pine-dimension-200));
   border-start-start-radius: 0;
   border-start-end-radius: 0;
 }
 
 .sage-card__figure--bleed-sides {
-  width: calc(100% + #{2 * sage-spacing(sm)});
-  margin: 0 (-1 * sage-spacing(sm));
+  width: calc(100% + #{2 * var(--pine-dimension-200)});
+  margin: 0 (-1 * var(--pine-dimension-200));
   border-radius: 0;
 }
 
 .sage-card__figure--bleed-top {
-  width: calc(100% + #{2 * sage-spacing(sm)});
-  margin: (-1 * sage-spacing(sm)) (-1 * sage-spacing(sm)) 0;
+  width: calc(100% + #{2 * var(--pine-dimension-200)});
+  margin: (-1 * var(--pine-dimension-200)) (-1 * var(--pine-dimension-200)) 0;
   border-end-start-radius: 0;
   border-end-end-radius: 0;
 }
@@ -180,15 +180,15 @@ $-sage-card-background: transparent;
 }
 
 .sage-card__header-layout {
-  width: calc(100% + #{2 * sage-spacing(card)});
-  margin: (-1 * sage-spacing(card)) (-1 * sage-spacing(card)) (-1 * sage-spacing(card));
+  width: calc(100% + #{2 * var(--pine-dimension-300)});
+  margin: (-1 * var(--pine-dimension-300)) (-1 * var(--pine-dimension-300)) (-1 * var(--pine-dimension-300));
   border-start-start-radius: sage-border(radius-large);
   border-start-end-radius: sage-border(radius-large);
 }
 
 .sage-card__list {
   padding: 0;
-  margin: 0 -#{sage-spacing()};
+  margin: 0 -#{var(--pine-dimension-300)};
   list-style: none;
 }
 
@@ -196,13 +196,13 @@ $-sage-card-background: transparent;
   @include sage-grid-card-row();
 
   margin-block-end: rem(-1px);
-  padding: sage-spacing(xs) sage-spacing();
+  padding: var(--pine-dimension-100) var(--pine-dimension-300);
   border-block-start: sage-border(default);
   border-block-end: sage-border(default);
 
   .sage-card__list--block-space-sm & {
-    padding-block-start: sage-spacing(sm);
-    padding-block-end: sage-spacing(sm);
+    padding-block-start: var(--pine-dimension-200);
+    padding-block-end: var(--pine-dimension-200);
   }
 
   .sage-card__list:first-child &:first-child {
