--- a/packages/sage-assets/lib/stylesheets/components/_form_input.scss
+++ b/packages/sage-assets/lib/stylesheets/components/_form_input.scss
@@ -8,7 +8,7 @@
 $-input-border-width: rem(1px);
 $-input-height: rem(40px);
 $-input-label-offset: rem(12px);
-$-input-padding-offset: sage-spacing(sm) - $-input-border-width;
+$-input-padding-offset: var(--pine-dimension-200) - $-input-border-width;
 $-input-popover-size: rem(40px);
 $-input-text-height: sage-font-size(body);
 
@@ -59,7 +59,7 @@ $-input-text-height: sage-font-size(body);
 
 .sage-form-field--error {
   .sage-upload-card & {
-    margin-block-start: sage-spacing(sm);
+    margin-block-start: var(--pine-dimension-200);
   }
 }
 
@@ -89,23 +89,23 @@ $-input-text-height: sage-font-size(body);
   grid-row: 2 / 3;
   grid-column: 1 / 2;
   top: 0;
-  inset-inline-start: sage-spacing(sm);
-  padding-inline-end: sage-spacing(2xs);
+  inset-inline-start: var(--pine-dimension-200);
+  padding-inline-end: var(--pine-dimension-050);
 }
 
 .sage-input__affix--suffix {
   grid-row: 2 / 3;
   grid-column: -1 / -2;
   top: 0;
-  inset-inline-end: sage-spacing(sm);
-  padding-inline-start: sage-spacing(2xs);
+  inset-inline-end: var(--pine-dimension-200);
+  padding-inline-start: var(--pine-dimension-050);
 }
 
 .sage-input__label {
   @include sage-form-field-label;
 
   grid-area: label;
-  margin-block-end: sage-spacing(xs);
+  margin-block-end: var(--pine-dimension-100);
 
   // input labels within toolbar groups are visually hidden to maintain alignment
   .sage-toolbar__group & {
@@ -122,7 +122,7 @@ $-input-text-height: sage-font-size(body);
 
   grid-area: input;
   height: $-input-height;
-  padding: sage-spacing(xs) sage-spacing(sm);
+  padding: var(--pine-dimension-100) var(--pine-dimension-200);
 
   .sage-input--has-icon & {
     padding-inline-end: $-input-popover-size;
