--- a/packages/sage-assets/lib/stylesheets/components/_form_select.scss
+++ b/packages/sage-assets/lib/stylesheets/components/_form_select.scss
@@ -15,8 +15,8 @@ $-select-color-label-background: sage-color(white);
 $-select-color-success: var(--pine-color-primary-200);
 $-select-filled-top-padding: rem(4.4px);
 $-select-height: rem(40px);
-$-select-padding-x: sage-spacing(sm);
-$-select-margin-label: sage-spacing(xs);
+$-select-padding-x: var(--pine-dimension-200);
+$-select-margin-label: var(--pine-dimension-100);
 $-select-arrow-font-size: rem(16px);
 $-select-arrow-icon-width: map-get($sage-icon-sizes, md);
 $-select-arrow-position: calc(100% - #{$-select-height});
@@ -32,7 +32,7 @@ $-select-arrow-position-inverse-with-message: calc(100% - #{$-select-height + $-
     "label label"
     "field field"
     "message message";
-  grid-template-columns: 1fr minmax(sage-spacing(lg), min-content);
+  grid-template-columns: 1fr minmax(var(--pine-dimension-400), min-content);
   grid-template-rows: min-content min-content min-content; /* needed to resolve Safari 14 layout issue */
 }
 
@@ -41,7 +41,7 @@ $-select-arrow-position-inverse-with-message: calc(100% - #{$-select-height + $-
     "label helpcontent helpcontent"
     "field field field"
     "message message message";
-  grid-template-columns: 1fr auto minmax(sage-spacing(lg), min-content);
+  grid-template-columns: 1fr auto minmax(var(--pine-dimension-400), min-content);
 }
 
 .sage-select__label {
