--- a/packages/sage-assets/lib/stylesheets/components/_page_heading.scss
+++ b/packages/sage-assets/lib/stylesheets/components/_page_heading.scss
@@ -63,9 +63,9 @@ $-page-heading-image-height-mobile: rem(120px);
   display: flex;
   align-items: center;
   grid-area: title;
-  gap: sage-spacing(xs);
+  gap: var(--pine-dimension-100);
   min-width: 0;
-  margin-inline-end: sage-spacing(sm);
+  margin-inline-end: var(--pine-dimension-200);
 }
 
 .sage-page-heading__title {
@@ -96,24 +96,24 @@ $-page-heading-image-height-mobile: rem(120px);
   }
 
   @media (max-width: sage-breakpoint(sm-max)) {
-    margin-block-end: sage-spacing();
+    margin-block-end: var(--pine-dimension-300);
   }
   @media (min-width: sage-breakpoint(md-min)) {
-    margin-inline-end: sage-spacing();
+    margin-inline-end: var(--pine-dimension-300);
   }
 }
 
 .sage-page-heading__crumbs {
   grid-area: crumbs;
-  margin-block-end: sage-spacing(sm);
+  margin-block-end: var(--pine-dimension-200);
 }
 
 .sage-page-heading__toolbar {
   display: flex;
   grid-area: toolbar;
   flex-wrap: wrap;
-  gap: sage-spacing();
-  margin-block-start: sage-spacing();
+  gap: var(--pine-dimension-300);
+  margin-block-start: var(--pine-dimension-300);
 
   // NOTE: Icon generation consolidated in `core/_icons.scss`
 }
@@ -125,12 +125,12 @@ $-page-heading-image-height-mobile: rem(120px);
 .sage-page-heading__actions-inner {
   display: flex;
   align-items: center;
-  gap: sage-spacing();
+  gap: var(--pine-dimension-300);
 
   @media (max-width: sage-breakpoint(sm-max)) {
     flex-wrap: wrap;
     justify-content: flex-start;
-    margin-block-start: sage-spacing(sm);
+    margin-block-start: var(--pine-dimension-200);
   }
 
   @media (min-width: sage-breakpoint()) {
@@ -145,7 +145,7 @@ $-page-heading-image-height-mobile: rem(120px);
   grid-area: secondary;
   justify-content: flex-end;
   align-items: center;
-  margin-block-start: sage-spacing(sm);
+  margin-block-start: var(--pine-dimension-200);
   color: var(--pine-color-grey-700);
   font-style: italic;
   @media (max-width: sage-breakpoint()) {
