--- a/packages/sage-assets/lib/stylesheets/components/_panel_figure.scss
+++ b/packages/sage-assets/lib/stylesheets/components/_panel_figure.scss
@@ -3,7 +3,7 @@
 ///
 /// @group sage/components/panel-figure
 ////
-$-panel-figure-padding: sage-spacing(lg);
+$-panel-figure-padding: var(--pine-dimension-400);
 $-panel-figure-default-background-color: var(--pine-color-grey-150);
 
 :root {
@@ -60,7 +60,7 @@ $-panel-figure-default-background-color: var(--pine-color-grey-150);
 
 .sage-panel__figure--bleed-bottom {
   width: calc(100% + #{2 * $-panel-figure-padding});
-  margin: 0 (-1 * sage-spacing(lg)) (-1 * sage-spacing(lg));
+  margin: 0 (-1 * var(--pine-dimension-400)) (-1 * var(--pine-dimension-400));
   border-start-start-radius: 0;
   border-start-end-radius: 0;
   border-end-start-radius: inherit;
@@ -69,13 +69,13 @@ $-panel-figure-default-background-color: var(--pine-color-grey-150);
 
 .sage-panel__figure--bleed-sides {
   width: calc(100% + #{2 * $-panel-figure-padding});
-  margin: 0 (-1 * sage-spacing(lg));
+  margin: 0 (-1 * var(--pine-dimension-400));
   border-radius: 0;
 }
 
 .sage-panel__figure--bleed-top {
   width: calc(100% + #{2 * $-panel-figure-padding});
-  margin: (-1 * sage-spacing(lg)) (-1 * sage-spacing(lg)) 0;
+  margin: (-1 * var(--pine-dimension-400)) (-1 * var(--pine-dimension-400)) 0;
   border-start-start-radius: inherit;
   border-start-end-radius: inherit;
   border-end-start-radius: 0;
