--- a/packages/sage-assets/lib/stylesheets/layout/_content.scss
+++ b/packages/sage-assets/lib/stylesheets/layout/_content.scss
@@ -10,7 +10,7 @@
   overflow: auto;
 
   // Ladera Integration Note:
-  // X-padding of 32px (`sage-spacing(lg)`) matches Ladera's `.content` wrapper padding value of `$spacing-outer`
-  padding: sage-spacing() sage-spacing(lg);
+  // X-padding of 32px (`var(--pine-dimension-400)`) matches Ladera's `.content` wrapper padding value of `$spacing-outer`
+  padding: var(--pine-dimension-300) var(--pine-dimension-400);
   scroll-behavior: smooth;
 }
